Fixed a few typos and added entire elder list to people page

--- a/people.html
+++ b/people.html
@@ -51,12 +51,12 @@
 <hr width="75%">
   <div class="row">
     <div class="col-sm-6 ">
-  		<p><h2>Worship Misson &amp; Pastoral Care</h2></p>
+  		<p><h2>Misson &amp; Pastoral Care</h2></p>
       <p><b>Mrs Alison Ross</b><br><br><b>Address:</b><br>10 Marlborough Park<br>East Kilbride<br>G75 8PS<br><br>Tel: 01355 265870<br>Email: ally1404@aol.com</p>
     </div>
   <div class="col-sm-6">
     <p><h2>Other Elders</h2></p>
-    <p>Mr Derek Wood<br>Mr Dennis Whitehill<br>Mrs Mhairi Macleod</p>
+    <p>Mrs Lynn Holmes<br>Mrs Heather Johnston<br>Mrs Mhairi Macleod<br>Mrs June Mair<br>Mr Philip McCardel<br>Mrs Anne Reid<br>Mr Eric Thorburn<br>Mr Dennis Whitehill<br>Mrs Elizabeth Whitehill<br>Mr Stewart Wright<br>Mr Derek Wood</p>
   </div>
 </div>
 
