--- a/future.html
+++ b/future.html
@@ -30,7 +30,7 @@
 <div class="container">
   <h1>The Future of Mossneuk</h1>
   <br>
-  <p>A Mossneuk we're hoping to give our building a face lift and turn it into something not just for the church family but the wider community! The involves adding on an extension featuring a brand-new Cafe &amp; kitchen area at the front of the church. Changes will be made inside the church as well with an increased foyer size to reduce bottlenecks at busy times and an updated sanctury. Below are some plans and renders of what the church might look like after it's face lift. If you wish to view the whole presentation you can download it!<br><br><a href="downloads/MossneukFuture.ppsx">Download as PowerPoint Show (.ppsx)</a> <i> Requires PowerPoint 2007 or later</i><br> <a href="downloads/MossneukFuture.pdf">Download as PDF(.pdf) </p>
+  <p>At Mossneuk we're hoping to give our building a face lift and turn it into something not just for the church family but the wider community! This involves adding on an extension featuring a brand-new Cafe &amp; kitchen area at the front of the church. Changes will be made inside the church as well with an increased foyer size to reduce bottlenecks at busy times and an updated sanctuary. Below are some plans and renders of what the church might look like after its face lift. If you wish to view the whole presentation you can download it!<br><br><a href="downloads/MossneukFuture.ppsx">Download as PowerPoint Show (.ppsx)</a> <i> Requires PowerPoint 2007 or later</i><br> <a href="downloads/MossneukFuture.pdf">Download as PDF(.pdf)</a> </p>
   <hr width="90%">
     <div class="row">
     <div class="col-sm-12 "><h2>Church Plans</h2><img src="img/f/plans.png"/ alt="Plans of the proposed changes"/></div>
@@ -48,7 +48,7 @@
 <hr width="75%">
   <div class="row">
     <div class="col-sm-8 "><img src="img/f/sanc.jpg" alt="View of updated Sanctury entrance"/></div>
-  <div class="col-sm-4"><h2>Updated Sanctury entrance</h2></div>
+  <div class="col-sm-4"><h2>Updated Sanctuary entrance</h2></div>
 </div>
 <hr width="80%">
 
