--- a/groups.html
+++ b/groups.html
@@ -219,7 +219,7 @@
             <h4 class="modal-title">Youth Fellowship</h4>
             </div>
             <div class="modal-body">
-                <p>The Youth Fellowship is open to anyone aged 12 and over. They ever second Satruday night.
+                <p>The Youth Fellowship is open to anyone aged 12 and over. They meet every second Satruday night.
                 <br><br>
                 Contact:  Miss Lindsey Mathieson<br>
                 Email: lindseyrm@live.co.uk </p>
@@ -234,4 +234,18 @@
 
 
 </body>
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-60335052-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
 </html>
