--- a/website/people.html
+++ b/website/people.html
@@ -27,6 +27,6 @@
     </div>
   <div class="col-sm-6">
     <p><h2>Other Elders</h2></p>
-    <p>Mrs Lynn Holmes<br>Mrs Heather Johnston<br>Mrs Mhairi Macleod<br>Mrs June Mair<br>Mr Philip McCardel<br>Mrs Anne Reid<br>Mr Eric Thorburn<br>Mr Dennis Whitehill<br>Mrs Elizabeth Whitehill<br>Mr Stewart Wright<br>Mr Derek Wood</p>
+    <p>Mrs Lynn Holmes<br>Mrs Heather Johnston<br>Mrs Mhairi Macleod<br>Mrs June Mair<br>Mr Philip McCardel<br>Mrs Anne Reid<br>Mr Eric Thorburn<br>Mr Denis Whitehill<br>Mrs Elizabeth Whitehill<br>Mr Stewart Wright<br>Mr Derek Wood</p>
   </div>
 </div>
